--- a/src/apollo/core/static/css/custom.css
+++ b/src/apollo/core/static/css/custom.css
@@ -6,3 +6,4 @@
 .submission-table .centered { text-align: center; }
 .submission-table .submission-field ul input[type="radio"], input[type="checkbox"] { margin: -2px 0 0 0;}
 .breadcrumb .locationtype { color: #DDD; }
+abbr[data-original-title] {cursor: help;border-bottom: 1px dotted #999999;}
