--- a/src/apollo/zimbabwe/templates/core/layout.html
+++ b/src/apollo/zimbabwe/templates/core/layout.html
@@ -13,6 +13,7 @@
     <link href="{{ STATIC_URL }}css/custom.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}css/table-fixed-header.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}css/datepicker.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}css/speech_bubble.css" rel="stylesheet">
     {% block stylesheets %}{% endblock %}
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-1.8.1.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap.min.js"></script>
