--- a/src/apollo/core/templates/core/submission_edit.html
+++ b/src/apollo/core/templates/core/submission_edit.html
@@ -1,5 +1,5 @@
 {% extends "core/layout.html" %}
-{% load apollo %}
+{% load apollo %}{% load comments %}{% load humanize %}
 {% block content %}
   {% with submission.siblings as siblings %}
   <form action="" method="post">
@@ -20,32 +20,40 @@
           <tr>
             <th>Observer</th>
             <td><strong>{{ submission.observer.name }}</strong>{% if submission.observer.phone %} ({{ submission.observer.phone }}){% endif %} &mdash; <strong>{{ submission.observer.observer_id }}</strong></td>
+            {% if submission.form.type == 'CHECKLIST' %}
             {% for sibling in siblings %}
             <td><strong>{{ sibling.observer.name }}</strong>{% if sibling.observer.phone %} ({{ sibling.observer.phone }}){% endif %} &mdash; <strong>{{ sibling.observer.observer_id }}</strong></td>
             {% endfor %}
+            {% endif %}
           </tr>
           <tr>
             <th>Location</th>
             <td><strong>{{ submission.location }}</strong></td>
+            {% if submission.form.type == 'CHECKLIST' %}
             {% for sibling in siblings %}
             <td><strong>{{ sibling.location }}</strong></td>
             {% endfor %}
+            {% endif %}
           </tr>
           {% if location_types %}
           <tr>
             <th>&nbsp;</th>
             <td>{% for location_type in location_types %}{% get_location_for_type submission location_type %}{% if not forloop.last %} / {% endif %}{% endfor %}</td>
+            {% if submission.form.type == 'CHECKLIST' %}
             {% for sibling in siblings %}
             <td>{% for location_type in location_types %}{% get_location_for_type sibling location_type %}{% if not forloop.last %} / {% endif %}{% endfor %}</td>
             {% endfor %}
+            {% endif %}
           </tr>
           {% endif %}
           <tr>
             <th>Supervisor</th>
             <td>{{ submission.observer.supervisor|default_if_none:"" }}</td>
+            {% if submission.form.type == 'CHECKLIST' %}
             {% for sibling in siblings %}
             <td>{{ sibling.observer.supervisor|default_if_none:"" }}</td>
             {% endfor %}
+            {% endif %}
           </tr>
         </thead>
       </table>
@@ -131,25 +139,68 @@
       <a class="btn btn-large btn-block" href="{% url submissions_list object.form.pk %}">Cancel</a>
     </div>
   </div>
-  <div class="row">
-    <p>&nbsp;</p>
-    <div class="span12">
-      <legend>Comments</legend>
-    </div>
-  </div>
-  <div class="row">
-    <div class="span6">
-      <div class="example-obtuse" style="margin-bottom:2em;">Things are going on smoothly at the polling unit. God bless ZESN</div>
-      <textarea rows="5"></textarea>
-    </div>
-  </div>
-  <div class="row">
-    <div class="span2">
-        <a class="btn btn-large btn-block">Add Comment</a>
-    </div>
-  </div>
   </form>
+{% endwith %}
+<div class="row">
+  <div class="span12">
+    <table class="table table-striped table-bordered" id="comments">
+      {% get_comment_list for submission as comments %}
+      {% for comment in comments %}
+      <tr>
+        <td>
+          <p><strong>{{ comment.user_name }}</strong> · <em>{{ comment.submit_date|naturaltime }}</em></p>
+          <p>{{ comment.comment }}</p>
+        </td>
+      </tr>
+      {% empty %}
+      <tr class="warning">
+        <td style="text-align:center">No comment.</td>
+      </tr>
+      {% endfor %}
+      <tr id="save_comment">
+        <td>
+            <textarea id="comment" style="width:98.5%"></textarea>
+            <input type="hidden" id="submission" name="submission" value="{{ submission.pk }}" />
+            <input id="save" type="button" value="Add Comment" class="btn btn-primary pull-right" />
+            <div id="loader" class="ajax_loader" style="visibility: hidden">
+              <div class="ajax_loader_block block_1"></div>
+              <div class="ajax_loader_block block_2"></div>
+              <div class="ajax_loader_block block_3"></div>
+            </div>
+        </td>
+      </tr>
+    </table>
   </div>
 </div>
-  {% endwith %}
+<script type="text/javascript">
+  $('#save').click(function () {
+    var comment = $('#comment').val(), submission = $('#submission').val();
+    if (comment) {
+      $.ajax({
+        url: "{% url add_comment %}",
+        type: 'POST',
+        data: {comment: comment, submission: submission},
+        beforeSend: function (xhr) {
+          $('#comment').attr('disabled', 'disabled');
+          $('#save').attr('disabled', 'disabled');
+          $('#loader').attr('style', 'visibility:visible;');
+        }
+      })
+      .done(function (data) {
+        // clear the value in the comment box
+        $('#comment').val("");
+        console.log('Data received:' + data);
+        // if there's a table row displaying "No comment.", remove it
+        $('#comments tr.warning').remove();
+        $('#save_comment').before('<tr><td><p><strong>' + data.username + '</strong> · <em>' + data.date + '</em></p><p>' + data.comment + '</p></td></tr>');
+      })
+      .always(function () {
+        // Re-enable
+        $('#comment').removeAttr('disabled');
+        $('#save').removeAttr('disabled');
+        $('#loader').attr('style', 'visibility:hidden;');
+      });  
+    }
+  });
+</script>
 {% endblock %}
