--- a/src/apollo/core/templates/core/submission_edit.html
+++ b/src/apollo/core/templates/core/submission_edit.html
@@ -162,7 +162,7 @@
             <textarea id="comment" style="width:98.5%"></textarea>
             <input type="hidden" id="submission" name="submission" value="{{ submission.pk }}" />
             <input id="save" type="button" value="Add Comment" class="btn btn-primary pull-right" />
-            <div id="loader" class="ajax_loader" style="visibility: hidden">
+            <div id="loader" class="ajax_loader pull-right" style="visibility: hidden">
               <div class="ajax_loader_block block_1"></div>
               <div class="ajax_loader_block block_2"></div>
               <div class="ajax_loader_block block_3"></div>
