--- a/src/apollo/core/templates/core/submission_edit.html
+++ b/src/apollo/core/templates/core/submission_edit.html
@@ -26,24 +26,27 @@
             {% endfor %}
             {% endif %}
           </tr>
+          {% if submission.form.type == 'CHECKLIST' %}
           <tr>
             <th>Location</th>
             <td><strong>{{ submission.location }}</strong></td>
-            {% if submission.form.type == 'CHECKLIST' %}
             {% for sibling in siblings %}
             <td><strong>{{ sibling.location }}</strong></td>
             {% endfor %}
-            {% endif %}
           </tr>
           {% if location_types %}
           <tr>
             <th>&nbsp;</th>
             <td>{% for location_type in location_types %}{% get_location_for_type submission location_type %}{% if not forloop.last %} / {% endif %}{% endfor %}</td>
-            {% if submission.form.type == 'CHECKLIST' %}
             {% for sibling in siblings %}
             <td>{% for location_type in location_types %}{% get_location_for_type sibling location_type %}{% if not forloop.last %} / {% endif %}{% endfor %}</td>
             {% endfor %}
-            {% endif %}
+          </tr>
+          {% endif %}
+          {% else %}
+          <tr>
+            <th>Location</th>
+            <td>{{ form.location }}</td>
           </tr>
           {% endif %}
           <tr>
