no longer displaying the supervisor for incidents

--- a/src/apollo/core/templates/core/submission_header.html
+++ b/src/apollo/core/templates/core/submission_header.html
@@ -4,7 +4,9 @@
     {% for location_type in location_types %}
     <th>{{ location_type.name }}</th>
     {% endfor %}
+    {% if form.type == 'CHECKLIST' %}
     <th>Supervisor</th>
+    {% endif %}
     <th>Observer</th>
     {% if form.type == 'CHECKLIST' %}
     {% for group in form_groups %}
