--- a/src/apollo/core/static/css/custom.css
+++ b/src/apollo/core/static/css/custom.css
@@ -10,11 +10,7 @@ abbr[data-original-title] {cursor: help;border-bottom: 1px dotted #999999;}
 
 /* override default img style */
 img {
-  width: auto\9;
-  height: auto;
-  vertical-align: middle;
-  border: 0;
-  -ms-interpolation-mode: bicubic;
+  max-width: none;
 }
 
 .ajax_loader{width:42px;}
