--- a/src/apollo/core/templates/core/submission_edit.html
+++ b/src/apollo/core/templates/core/submission_edit.html
@@ -48,7 +48,20 @@
             <th>Location</th>
             <td>{{ form.location }}</td>
           </tr>
+          {% if location_types %}
+          <tr>
+            <th>&nbsp;</th>
+            <td>{% for location_type in location_types %}{% get_location_for_type submission location_type %}{% if not forloop.last %} / {% endif %}{% endfor %}</td>
+          </tr>
           {% endif %}
+          {% if form.data__location.value %}
+          <tr>
+            <th>{{ form.data__location }}</th>
+            <td><strong><em>{{ form.data__location.value }}</em></strong></td>
+          </tr>
+          {% endif %}
+          {% endif %}
+          {% if submission.form.type == 'CHECKLIST' %}
           <tr>
             <th>Supervisor</th>
             <td>{{ submission.observer.supervisor|default_if_none:"" }}</td>
@@ -58,6 +71,7 @@
             {% endfor %}
             {% endif %}
           </tr>
+          {% endif %}
         </thead>
       </table>
       {% if submission.form.type == 'CHECKLIST' %}
@@ -114,8 +128,8 @@
           {% endif %}
           {% for field in fieldset %}
           <tr{% if field.label in object.overrides %} class="warning"{% endif %}>
-            <td>{{ field.label }}</td>
-            <td>{{ field.help_text }}
+            <td style="text-align: center">{{ field.label }}</td>
+            <td width="100%">{{ field.help_text }}
               {% if field.field.choices %}
               <span class="options">
                 {% for choice in field.field.choices %}
@@ -128,6 +142,14 @@
           </tr>
           {% endfor %}
           {% endfor %}
+          <tr>
+            <td style="text-align: right">Status</td>
+            <td colspan="2">{{ form.data__status }}</td>
+          </tr>
+          <tr>
+            <td style="text-align: right">Description</td>
+            <td colspan="2">{{ form.data__description }}</td>
+          </tr>
         </tbody>
       </table>
       {% endif %}
@@ -144,6 +166,8 @@
   </div>
   </form>
 {% endwith %}
+
+{% if submission.form.type == 'CHECKLIST' %}
 <div class="row">
   <div class="span12">
     <table class="table table-striped table-bordered" id="comments">
@@ -206,4 +230,5 @@
     }
   });
 </script>
+{% endif %}
 {% endblock %}
