added the witness field

--- a/src/apollo/core/templates/core/submission_edit.html
+++ b/src/apollo/core/templates/core/submission_edit.html
@@ -147,6 +147,10 @@
             <td colspan="2">{{ form.data__status }}</td>
           </tr>
           <tr>
+            <td style="text-align: right">Witness</td>
+            <td colspan="2">{{ form.data__witness }}</td>
+          </tr>
+          <tr>
             <td style="text-align: right">Description</td>
             <td colspan="2">{{ form.data__description }}</td>
           </tr>
