--- a/src/apollo/zimbabwe/templates/core/layout.html
+++ b/src/apollo/zimbabwe/templates/core/layout.html
@@ -62,5 +62,20 @@
         <footer>{% block footer %}{% endblock %}</footer>
       </div>
     </div>
+    {% if not debug %}
+    <script type="text/javascript">
+
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-126343-19']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+
+    </script>
+    {% endif %}
   </body>
 </html>
