changed position for the tabs

--- a/src/apollo/core/templates/core/critical_incidents_summary.html
+++ b/src/apollo/core/templates/core/critical_incidents_summary.html
@@ -17,7 +17,7 @@
  <div class="row">
 	<div class="span12">
 		{% if incidents_summary.top %}
-		<div class="tabbable tabs-right"> <!-- Only required for left/right tabs -->
+		<div class="tabbable"> <!-- Only required for left/right tabs -->
 			<ul class="nav nav-tabs">
 				<li class="active"><a href="#tab1" data-toggle="tab">Table</a></li>
 				<li><a href="#tab2" data-toggle="tab">Charts</a></li>
