--- a/src/apollo/core/templates/core/checklist_summary_breakdown.html
+++ b/src/apollo/core/templates/core/checklist_summary_breakdown.html
@@ -57,7 +57,7 @@
 						{% for location in tag_stats.locations.keys|sortedlist %}
                         {% with tag_stats.locations|keyvalue:location as location_stats %}
 						<tr>
-							<td><span style="margin-left:2em">{{ location }}</span></td>
+							<td><span style="margin-left:2em">{{ location }} · <span class="muted"><em>{{ location_type }}</em></span></span></td>
 							{% if tag_stats.type == 'numeric' %}
 							<td align="right">{{ location_stats.mean|floatformat:0 }}</td>
 							{% else %}
