--- a/src/apollo/core/templates/core/checklist_summary.html
+++ b/src/apollo/core/templates/core/checklist_summary.html
@@ -53,7 +53,11 @@
 	{% else %}
 	{% endif %}
 	{% else %}
-	<h3>No records to display</h3>
+    <table width="100%" class="table table-striped table-bordered">
+	<tr class="warning">
+    <td style="text-align:center">No Data Available</td>
+    </tr>
+    </table>
 	{% endif %}
 	</div>
 </div>
