--- a/src/apollo/core/templates/core/dashboard.html
+++ b/src/apollo/core/templates/core/dashboard.html
@@ -72,6 +72,14 @@
       </script>
     </div>
   </div>
-{% endfor %}  
+{% empty %}
+  <div class="span12">
+<table width="100%" class="table table-striped table-bordered">
+  <tr class="warning">
+    <td style="text-align:center">No Data Available</td>
+  </tr>
+</table>
+  </div>
+{% endfor %}
 </div>
 {% endblock %}
