--- a/src/apollo/core/templates/core/layout.html
+++ b/src/apollo/core/templates/core/layout.html
@@ -43,9 +43,9 @@
             <a class="brand" href="#">Apollo</a>
             <ul class="nav pull-right">
               <li><a href="{% url dashboard %}"><i class="icon-home"></i> Dashboard</a></li>
-              {% forms_menu %}
+              {% forms_menu request %}
               {% if perms.core.can_verify %}<li><a href=""><i class="icon-warning-sign"></i> Verification</a></li>{% endif %}
-              {% if perms.core.can_analyse %}{% analysis_menu %}{% endif %}
+              {% if perms.core.can_analyse %}{% analysis_menu request %}{% endif %}
               {% if perms.core.view_observers %}<li><a href="{% url contacts_list %}"><i class="icon-user"></i> Observers</a></li>{% endif %}
               {% if perms.messagelog.view_messages %}<li><a href="{% url messages_list %}"><i class="icon-envelope"></i> Messages</a></li>{% endif %}
               <a href="{% url user-logout %}" class="pull-left btn btn-default">Logout</a>
