--- a/src/apollo/zimbabwe/templates/core/layout.html
+++ b/src/apollo/zimbabwe/templates/core/layout.html
@@ -54,7 +54,7 @@
         </div>
       </div>
     <div class="container con_style">
-      <h3 class="h_style">{% block title %}{{ page_title }}{% endblock %}</h3>
+      <h3 class="h_style">{% block title %}{{ page_title }}{% endblock %}{% activity_name request %}</h3>
     </div>
     <div class="container">
       {% block content %}{% endblock %}
