display the first and last pagination buttons

--- a/src/apollo/core/templates/core/contact_list.html
+++ b/src/apollo/core/templates/core/contact_list.html
@@ -64,7 +64,7 @@
 </div>
 <div class="row">
   <div class="span12">
-    {% bootstrap_paginate page_obj range=10 %}
+    {% bootstrap_paginate page_obj range=10 show_first_last="true" %}
   </div>
 </div>
 {% endblock %}
