--- a/src/apollo/core/templates/core/submission_list.html
+++ b/src/apollo/core/templates/core/submission_list.html
@@ -56,7 +56,7 @@
 {% if is_paginated %}
 <div class="row">
   <div class="span12">
-  {% bootstrap_paginate page_obj range=10 %}
+  {% bootstrap_paginate page_obj range=10 show_first_last="true" %}
   </div>
 </div>
 {% endif %}
