--- a/src/apollo/messagelog/templates/messagelog/message_list.html
+++ b/src/apollo/messagelog/templates/messagelog/message_list.html
@@ -27,26 +27,28 @@
 
 <div class="row">
   <div class="span12">
-    <table class="table table-striped table-bordered table-hover">
+    <table class="table table-striped table-bordered table-hover" style="table-layout:fixed">
       <thead >
         <tr>
-          <th>Date</th>
-          <th>Mobile</th>
-          <th>Direction</th>
-          <th>Text</th>
+          <th width="7%">Date</th>
+          <th width="7%">Time</th>
+          <th width="10%">Mobile</th>
+          <th width="7%">Direction</th>
+          <th width="60%">Text</th>
         </tr>
       </thead>
       <tbody>
         {% for message in messages %}
         <tr>
           <td>{{ message.created|date:"D j-M" }}</td>
+          <td>{{ message.created|date:"g:i a" }}</td>
           <td>{{ message.mobile }}</td>
-          <td>{{ message.direction }}</td>
-          <td>{{ message.text }}</td>
+          <td>{% if message.direction == 1 %}IN{% else %}OUT{% endif %}</td>
+          <td style="word-wrap:break-word">{{ message.text }}</td>
         </tr>
         {% empty %}
         <tr class="warning">
-          <td style="text-align:center" colspan="4">No Data Available</td>
+          <td style="text-align:center" colspan="5">No Data Available</td>
         </tr>
         {% endfor %}
       </tbody>
